--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <link rel="stylesheet" href="./styles.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +17,10 @@
       <li><a href="#">header link two</a></li>
       <li><a href="#">header link three</a></li>
     </ul>
+  </div>
+
+  <div class="first">
+    <p class="hero-main-text">This website is awesome</p>
   </div>
 
 
