Finished First Main Div

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Landing Page</title>
 </head>
 <body>
+  <!-- Header Div  -->
   <div class="header">
     <p class="header-logo">Header Logo</p>
 
@@ -19,8 +20,18 @@
     </ul>
   </div>
 
-  <div class="first">
-    <p class="hero-main-text">This website is awesome</p>
+  <!-- First Div  -->
+  <div class="container-one">
+    <div class="container-one-child">
+      <div class="first-child-one">
+        <p class="hero-main-text">This website is awesome</p>
+        <p class="hero-second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <a class="button-one" href="#">Sign up</a>
+      </div>
+      <div class="first-child-two">
+        <p>this is a placeholder for an image</p>
+      </div>
+    </div>
   </div>
 
 
