--- a/index.html
+++ b/index.html
@@ -34,6 +34,34 @@
     </div>
   </div>
 
+  <!-- Second Div -->
+  <div class="second-div">
+    <div class="second-div-child">
+      <p class="info-text">Some random information.</p>
+
+      <div class="boxes">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+
+      <div class="boxes-text">
+        <p class="box-text">this is some subtext under an illustration or image</p>
+        <p class="box-text">this is some subtext under an illustration or image</p>
+        <p class="box-text">this is some subtext under an illustration or image</p>
+        <p class="box-text">this is some subtext under an illustration or image</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Third Div -->
+  <div class="third-div">
+    <div class="third-div-child">
+      <p class="italic-text">This is an inspiring quote, or a testimonial from a customer. Maybe it’s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+      <p class="thor-text">-Thor, God of Thunder</p>
+    </div>
+  </div>
 
 </body>
 </html>
