Finished Landing Page Project
Added Final Div and footer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
   <link rel="stylesheet" href="./styles.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,5 +62,22 @@
     </div>
   </div>
 
+  <!-- Fourth Div -->
+  <div class="fourth-div">
+    <div class="fourth-div-child">
+      <div class="text-and-button">
+        <div class="blue-button-text">
+          <p class="big-text">Call to action! It's time!</p>
+          <p class="small-text">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <a href="#" class="button-two">Sign up</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer-->
+  <div class="footer">
+    <p class="footer-text">Copyright © The Odin Project 2021</p>
+  </div>
 </body>
 </html>
